--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ default_asides: [asides/recent_posts.html, asides/github.html]
 # ----------------------- #
 
 # Github repositories
-github_show_profile_link: false
+github_show_profile_link: true
 github_user: tomwhipple
 github_repo_count: 4
 github_skip_forks: true
